# whatisitworth-capstone

./: Dockerfile  LICENSE  README.md  eda_report.html  main.py  pyproject.toml  run.sh  run_local.sh
data/: make_model_variants.json  make_model_variants_backup.json  sa_cities_provinces.csv
models/: bruh.txt
notebooks/: eda.ipynb  tensorflow_model.ipynb  train.ipynb  ydf_model.ipynb
public/: index.html  index_cool.html  index_safe.html
scripts/: call_model.py  create_model.py  populate_provinces.ipynb  prepare_data.py  save_variants.py
