[project]
name = "whatisitworth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow-decision-forests>=1.12.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.3",
]
